# Pizarra

./: .gitignore  CMakeLists.txt  CMakePresets.json  Pizarra.code-workspace  Pizarra.sln  Pizarra.vcxproj  README.md  main.cpp  whiteboard.cpp  whiteboard.hpp
Engine/: Engine.cpp  Engine.hpp
gfx/: eraser.h  mario.h
lib/: SelbaWard.lib
